// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders no pagination when only 1 page 1`] = `
<div
  className="ui secondary attached menu"
>
  <div
    className="menu"
  >
    <a
      className="icon item chevron-left-icon"
      onClick={[Function]}
      value={0}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        onClick={null}
        style={
          Object {
            "fill": "currentColor",
            "height": "23px",
            "width": "auto",
          }
        }
        viewBox=""
        xmlns=""
      />
      
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={0}
    >
      1
    </a>
  </div>
</div>
`;

exports[`Pagination renders page size options when specified 1`] = `
<div
  className="ui secondary attached menu"
>
  <div
    className="menu"
  >
    <a
      className="icon item chevron-left-icon"
      onClick={[Function]}
      value={0}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        onClick={null}
        style={
          Object {
            "fill": "currentColor",
            "height": "23px",
            "width": "auto",
          }
        }
        viewBox=""
        xmlns=""
      />
      
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={0}
    >
      1
    </a>
  </div>
  <div
    className="right menu"
  >
    <div
      className="item"
      onClick={[Function]}
    >
      Show
      :
    </div>
    <a
      className="active item"
      onClick={[Function]}
      value={15}
    >
      15
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={30}
    >
      30
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={50}
    >
      50
    </a>
  </div>
</div>
`;

exports[`Pagination renders pagination when multiple pages are specified 1`] = `
<div
  className="ui secondary attached menu"
>
  <div
    className="menu"
  >
    <a
      className="icon item chevron-left-icon"
      onClick={[Function]}
      value={5}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        onClick={null}
        style={
          Object {
            "fill": "currentColor",
            "height": "23px",
            "width": "auto",
          }
        }
        viewBox=""
        xmlns=""
      />
      
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={0}
    >
      1
    </a>
    <div
      className="disabled item"
      onClick={[Function]}
    >
      ...
    </div>
    <a
      className="item"
      onClick={[Function]}
      value={4}
    >
      5
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={5}
    >
      6
    </a>
    <a
      className="active item"
      onClick={[Function]}
      value={6}
    >
      7
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={7}
    >
      8
    </a>
    <a
      className="item"
      onClick={[Function]}
      value={8}
    >
      9
    </a>
    <div
      className="disabled item"
      onClick={[Function]}
    >
      ...
    </div>
    <a
      className="item"
      onClick={[Function]}
      value={11}
    >
      12
    </a>
    <a
      className="icon item chevron-right-icon"
      onClick={[Function]}
      value={7}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        onClick={null}
        style={
          Object {
            "fill": "currentColor",
            "height": "23px",
            "width": "auto",
          }
        }
        viewBox=""
        xmlns=""
      />
      
    </a>
  </div>
</div>
`;
